fix: message sometimes not aligned on center

--- a/jssrc/basestyle.scss
+++ b/jssrc/basestyle.scss
@@ -57,6 +57,7 @@
     pointer-events: none;
     user-select: none;
     position: absolute;
+    left: 0;
     width: 100%;
     bottom: 100%;
     text-align: center;
